--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
     <div class="col">
-      <h1>Aplicacion de Calculadora</h1>
+      <h1>{{titulo}}</h1>
       <app-suma></app-suma>
     </div>
   </div>
