--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,12 @@
   <div class="row">
     <div class="col">
       <h1>{{titulo}}</h1>
-      <app-suma></app-suma>
+      <app-suma
+        (resultadoEmitter)="getResultado($event)"
+      ></app-suma>
+      <app-resultado
+        [resultado]="resultado"
+      ></app-resultado>
     </div>
   </div>
 </div>
